billing-namespace/invoice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: invoice-app
    ns: billingns
  name: invoice-deployment
  namespace: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice-app
  template:
    metadata:
      labels:
        app: invoice-app
    spec:
      dnsPolicy: Default 
      enableServiceLinks: false
      hostNetwork: false  
      hostPID: false
      hostIPC: false        
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000         
      containers:
      - name: invoiceapp
        image: invoiceapp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
          name: http-web-svc
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
