billing-namespace/billing-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: billing-app
  name: billing-service
  namespace: billing
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: billing-app
  type: LoadBalancer
