billing-namespace/invoice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: invoice-app
  name: invoice-service
  namespace: billing
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: invoice-app
  type: ClusterIP
